--- a/Rainbow/Views/Base.lproj/Main.storyboard
+++ b/Rainbow/Views/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="tQk-rT-8m4" kind="show" id="Gu2-di-3o9"/>
+                                    <segue destination="tQk-rT-8m4" kind="show" identifier="ToDetailViewController" id="Gu2-di-3o9"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
